base/crapi/deployment-community.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crapi-community
  namespace: crapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crapi-community
  template:
    metadata:
      labels:
        app: crapi-community
    spec:
      containers:
        - name: crapi-community
          image: crapi/community:latest
          ports:
            - containerPort: 8087
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
