base/crapi/deployment-mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crapi-mongodb
  namespace: crapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crapi-mongodb
  template:
    metadata:
      labels:
        app: crapi-mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.2
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}
