base/crapi/deployment-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crapi-postgres
  namespace: crapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crapi-postgres
  template:
    metadata:
      labels:
        app: crapi-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
