base/crapi/deployment-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crapi-web
  namespace: crapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crapi-web
  template:
    metadata:
      labels:
        app: crapi-web
    spec:
      containers:
        - name: crapi-web
          image: crapi/frontend:latest
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /
              port: 8888
            initialDelaySeconds: 10
            periodSeconds: 10
