base/crapi/deployment-workshop.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crapi-workshop
  namespace: crapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crapi-workshop
  template:
    metadata:
      labels:
        app: crapi-workshop
    spec:
      containers:
        - name: crapi-workshop
          image: crapi/crapi-workshop:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
